Bug 37206 - Recovery window shows error report text
Summary: Recovery window shows error report text
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
3.4.0 Beta5
Hardware: x86-64 (AMD64) Windows (All)
: medium minor
Assignee: Caolán McNamara
URL:
Whiteboard:
Keywords:
: 42417 43042 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-05-14 08:55 UTC by Rainer Bielefeld Retired
Modified: 2011-12-23 13:25 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Screenshot, pls. see original report! (40.64 KB, image/png)
2011-05-14 08:55 UTC, Rainer Bielefeld Retired
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Bielefeld Retired 2011-05-14 08:55:37 UTC
Created attachment 46716 [details]
Screenshot, pls. see original report!

After a crash after recovery my "LibreOffice 3.4Beta5  – WIN7  Home Premium  (64bit) German UI [DEV300m103 (Build:5)]" pretends to have created an error report, but "continue" does not show a report. 

That's rather new, I can't remember to have seen a similar text during the last months.
Comment 1 manj_k 2011-08-18 15:41:01 UTC
Replicated (2011-07-17) with LibO 3.4.2 RC1 on WinXP 32b
[LibreOffice 3.4.2 OOO340m1 (Build:201)]

"A report of the crash was created to help us identify the reason why LibreOffice crashed. Click 'Next' to get to the Error Report Tool or press 'Cancel' to skip this step."

See https://bugs.freedesktop.org/attachment.cgi?id=49203
([1] Screenshots: AutoRecovery process - error messages – PDF page 3)

[ Context: https://bugs.freedesktop.org/show_bug.cgi?id=34805#c12 ]
Comment 2 Rainer Bielefeld Retired 2011-08-18 20:56:02 UTC
Confirmed due to Comment 1

@André:
May be this can simple be reverted in Pootle to the Text from 3.3?
Please feel free to reassign (or reset Assignee to default) if it’s not your area or if provided information is not sufficient. Please set Status to ASSIGNED if you accept this Bug.
Comment 3 Caolán McNamara 2011-08-19 01:03:21 UTC
Hmm, 

svx/source/dialog/docrecovery.cxx

    ::rtl::OUString CFG_PACKAGE_RECOVERY( RTL_CONSTASCII_USTRINGPARAM  ( "org.openoffice.Office.Recovery/" ));
    ::rtl::OUString CFG_PATH_CRASHREPORTER( RTL_CONSTASCII_USTRINGPARAM( "CrashReporter"                 ));
    ::rtl::OUString CFG_ENTRY_ENABLED( RTL_CONSTASCII_USTRINGPARAM     ( "Enabled"                       ));

    sal_Bool bCrashRepEnabled( sal_True );
    css::uno::Any aVal = ::comphelper::ConfigurationHelper::readDirectKey(
                                pCore->getSMGR(),
                                CFG_PACKAGE_RECOVERY,
                                CFG_PATH_CRASHREPORTER,
                                CFG_ENTRY_ENABLED,
                                ::comphelper::ConfigurationHelper::E_READONLY);
    aVal >>= bCrashRepEnabled;
    m_bRecoveryOnly = !bCrashRepEnabled;
...
                 if ( m_bRecoveryOnly )
                 {
                     m_aDescrFT.SetText(m_aRecoveryOnlyFinishDescr);
                     m_aNextBtn.SetText(m_aRecoveryOnlyFinish);
                     m_aNextBtn.Enable(sal_True);
                     m_aCancelBtn.Enable(sal_False);
                 }
                 else
                 {
                    m_aDescrFT.SetText(m_aTitleRecoveryReport);
                    m_aNextBtn.SetText(m_aNextStr);
                    m_aNextBtn.Enable(sal_True);
                    m_aCancelBtn.Enable(sal_True);
                 }


so that text should only appear if the crashreporter is available according to the config.
Comment 4 Caolán McNamara 2011-08-19 01:37:37 UTC
Changed the config to also be "false" for crash reporter installed, which is the case. The crash reporter isn't there in our builds. Not yet anyway, maybe never.

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2f800d902f060fdb43a56e381264e0b626f1af2f

Not proposed for 3-4, don't think its that important, or is it ?
Comment 5 manj_k 2011-11-09 11:07:18 UTC
*** Bug 42417 has been marked as a duplicate of this bug. ***
Comment 6 manj_k 2011-11-18 17:09:03 UTC
*** Bug 43042 has been marked as a duplicate of this bug. ***
Comment 7 Björn Michaelsen 2011-12-23 13:25:21 UTC
Since all new unconfirmed bugs start in state UNCONFIRMED now and old unconfirmed bugs were moved to NEEDINFO with a explanatory comment, all bugs promoted above those bug states to NEW and later are automatically confirmed making the CONFIRMED whiteboard status redundant. Thus it will be removed.