fdo#37206 toggle default config to false for crash-reporter installed